--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title>hello world</title>
+</head>
 <body style="background-color:Purple">
 <h1>my website</h1>
 <br>
 <img src="https://s.yimg.com/ny/api/res/1.2/70JaS5agXTYp9UWxfxH32Q--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/blavity_articles_483/4fc4c5445be10e3568e8f077d2ec358d" />
-</head>
+</body>
 </html>
