--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p> Clothes are a big thing in the daily life style</p>
 <p><b>clothes have a personality and speaks value of a person</b></p>
 <p><i>If theres clothes thers goals</i></p>
- <a href="https://straye.com/?gad_source=1&gclid=EAIaIQobChMI3oKX35b8hgMVyzYIBR28dw-SEAAYASAAEgKoivD_BwE">hello</a>
+<p> <a href="https://straye.com/?gad_source=1&gclid=EAIaIQobChMI3oKX35b8hgMVyzYIBR28dw-SEAAYASAAEgKoivD_BwE">hello</a> </p> 
 <br>
 <img src="https://s.yimg.com/ny/api/res/1.2/70JaS5agXTYp9UWxfxH32Q--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/blavity_articles_483/4fc4c5445be10e3568e8f077d2ec358d" />
 </body>
